Update version and modified content

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,13 +2,11 @@
 
 - type: github
   icon: "fab fa-github"
+  url: 'github.com/orionilloc'
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
-
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+# - type: email
+#  icon: "fas fa-envelope"
+#  noblank: true # open link in current tab
 
 - type: rss
   icon: "fas fa-rss"
